created a link to sales page,added styles to sales page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Pat's salmon cookies</h1>
     <nav>
       <ul>
-        <li class ="salmon"><a href="">Home</a></li>
+        <li class ="salmon"><a href="sales.html">sales</a></li>
         <li class ="salmon"><a href="">Images</a></li>
         <li class ="salmon"><a href="">About us</a></li>
       </ul>
