--- a/sales.html
+++ b/sales.html
@@ -3,6 +3,8 @@
   
  <head>
    <title>Sales Page!</title>
+   <link rel="stylesheet" href="css/reset.css">
+   <link rel="stylesheet" href="css/salesstyles.css">
 
   </head>
   <body><h1> 1st and pike</h1>
