created constructor function,removed lists,added table using js

--- a/sales.html
+++ b/sales.html
@@ -7,17 +7,9 @@
    <link rel="stylesheet" href="css/salesstyles.css">
 
   </head>
-  <body><h1> 1st and pike</h1>
+  <body>
   <main>
-    <ul id ="lists"></ul>
-    <h1>SeaTac Airport</h1>
-    <ul id = "lists2"></ul>
-    <h1>Seattle center</h1>
-    <ul id = "lists3"></ul>
-    <h1>Capitol Hill</h1>
-    <ul id = "lists4"></ul>
-    <h1>Alki</h1>
-    <ul id ="lists5"></ul>
+    <table id ="Cookies"></table>
   </main>
   <script src="js/saleapp.js"></script>
 </body>
