added css style ti each element

--- a/sales.html
+++ b/sales.html
@@ -8,8 +8,10 @@
 
   </head>
   <body>
+    <h1>Salmon cookie Sale</h1>
   <main>
-    <table id ="Cookies"></table>
+    <table class ="excel"id ="Cookies"></table>
+    <legend>Add new location</legend>
     <form id ="storeForm">
       <fieldset>
         <label for ="location">Location Name:</label>
@@ -27,6 +29,11 @@
         <button>Add a Location</button>
       </fieldset>
     </form>
+    <section id ="left"class="photo">
+        <div class ="width">
+       <img id ="chinook" src="images/shirt.jpg">
+       </div>
+      </section>
   </main>
   <script src="js/saleapp.js"></script>
 </body>
