corrected the path to images

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       <section class ="courses">
         <article>
           <figure>
-            <img src ="images/frosted-cookie.jpg">
-            <img src ="images/salmon.png">
-            <img src ="images/family.jpg">
+            <img src ="Images/frosted-cookie.jpg">
+            <img src ="Images/salmon.png">
+            <img src ="Images/family.jpg">
           </figure>
           <hgroup>
             <h2>
@@ -35,9 +35,9 @@
         </article>
         <article>
           <figure>
-            <img src= "images/fish.jpg">
-            <img src="images/chinook.jpg">
-            <img src ="images/cutter.jpeg">
+            <img src= "Images/fish.jpg">
+            <img src="Images/chinook.jpg">
+            <img src ="Images/cutter.jpeg">
           </figure>
           <hgroup>
             <h2>Gluten free cookies!!</h2>
