--- a/sales.html
+++ b/sales.html
@@ -32,7 +32,7 @@
   
     <section id ="left"class="photo">
         <div class ="width">
-       <img id ="chinook" src="images/shirt.jpg">
+       <img id ="chinook" src="Images/shirt.jpg">
        </div>
       </section>
   </main>
